--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,20 @@
 // Navigation code here
+
+nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: @nav-bg;
+    border: 2px solid @nav-border;
+    padding: 15px;
+    .logo {
+        margin-bottom: 20px;
+    }
+    .nav-bar {
+        a {
+            padding: 15px;
+            color: @nav-font;
+        }
+    }
+}
